Removed weird antialiasing issue on ios

--- a/src/globalStyles/_typography.scss
+++ b/src/globalStyles/_typography.scss
@@ -66,7 +66,6 @@ a {
 (min-device-pixel-ratio: 1.5) {
   * {
     -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
   }
 }
 
